# ComputorV1

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: equation.py  main.py  parser.py  parsing.py  utils.py
src/COMPUTERV1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_equation.py  test_parser.py
